2.0.0:
  - Ansible Playbook Run as Cloudify lifecycle operation.
  - Implied host relationship: cloudify.ansible.relationships.connected_to_host.
2.0.1:
  - Where retried hosts keys are overwritten with the path of the previous key.
  - Add more requirements
  - Support more groups from deployment groups
2.0.3:
  - Update Ansible Version
  - Fix error when stdout is required in logging.
2.0.4:
  - Catch and raise Ansible parser errors during execute.
  - Add SSH StrictHostKeyChecking by default.
2.1.0:
  - New method is transparent usage of ansible-playbook binary. The version used is that which exists in the PATH variable, which is taken from the Wagon.
  - replace site_yaml_path with playbook_path.
  - Deprecated these keys: ['site_yaml_path', 'inventory_config', 'variable_manager_config', 'passwords', 'modules', 'private_key_file'].
  - Handle Ansible-Playbook Error codes.
2.1.1:
  - Fix bug preventing passing path or content of Ansible Inventory file.
2.2.0:
  - Ansible Playbook Additional Args
2.3.0:
  - Support run `ansible.cloudify_ansible.tasks.run` in `establish` action.
2.4.0:
  - Unlink `source` from `target` on scale down by `ansible.cloudify_ansible.tasks.ansible_remove_host`.
  - Add `resumable` support to operations
  - Support `ansible_ssh_pass` in `agent_config`.
  - Fix support for `cfy local`.
2.5.0:
  - Update Ansible Version to use 2.8.x
  - Update Ansible examples

2.6.0:
  - Add support for new node type called `cloudify.nodes.ansible.Playbook`
  - Add support for new relationship `cloudify.ansible.relationships.run_on_host` which runs on `establish` operation
  - Enhance handling string value for ansible inventory `sources`