@@ -35,3 +35,5 @@
   - Add support for new node type called `cloudify.nodes.ansible.Playbook`
   - Add support for new relationship `cloudify.ansible.relationships.run_on_host` which runs on `establish` operation
   - Enhance handling string value for ansible inventory `sources`
+  - Update Ansible SDK execution to use cloudify script runner for running command
+  - Update handling logging for running Ansible command
